# Data-Engineering-Zoomcamp-2026

./: .gitignore  README.md  pyproject.toml
01-docker-terraform/: Dockerfile  docker-compose.yaml  homework.md  main.tf  notes.md  pipeline.py  pipeline_simple.py
02-workflow-orchestration/: docker-compose.yml  homework.md  notes.md
