[project]
name = "data-engineering-zoomcamp-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt[filesystem]>=1.20.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "typer>=0.21.1",
]

[dependency-groups]
dev = [
    "pgcli>=4.4.0",
]
